--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
     defaultConfig {
         applicationId "souleima.saviour"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -26,4 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.firebaseui:firebase-ui:0.4.4'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile 'com.nightonke:boommenu:2.0.7'
 }
+
+apply plugin: 'com.google.gms.google-services'
